tests/build_fail/bseq_fail_ident_expr_no_var.rs
use bit_seq::bseq;

fn main() {
    bseq!(non_exiting:1);
}